--- a/list.html
+++ b/list.html
@@ -64,7 +64,7 @@
 
             <div class="row mt-5 border d-flex justify-content-evenly">
                   <div class="col-12 ">
-                        <ul class="list-inline ">
+                        <ul class="list-inline d-flex justify-content-evenly">
                               <li class="list-inline-item">html</li>
                               <li class="list-inline-item">css</li>
                               <li class="list-inline-item">java script</li>
